testdata/invalid/invalid_bitflags_on_const.bop
[flags]
const uint8 uint8const = 1;